added items list

--- a/data-service/src/app/contacts-list/contacts-list.component.html
+++ b/data-service/src/app/contacts-list/contacts-list.component.html
@@ -1,9 +1,14 @@
 <div class="container">
-    <form>
-        <div class="form-group col-12 mt-4">
-            <button (click)="onList()" class="btn btn-primary">List Contacts</button>
-        </div>        
-    </form>
+    <div class="row">
+        <a routerLink="/menu">&lt; Back</a>
+    </div>
+    <div class="row">
+        <form>
+            <div class="form-group col-12 mt-4">
+                <button (click)="onList()" class="btn btn-primary">List Contacts</button>
+            </div>        
+        </form>
+    </div>
     <div class="row">
         <ul >
             <li *ngFor="let contact of contacts">{{contact["MA_Contacts.CompanyName"]}}</li>
