--- a/data-service/src/app/login/login.component.html
+++ b/data-service/src/app/login/login.component.html
@@ -1,19 +1,19 @@
 <div class="container">
     <div *ngIf="!connection.current.jwtToken">
         <form>
-            <div class="form-group col-4 mt-3">
+            <div class="form-group col-6 mt-3">
                 <label for="rootURL">Connect to</label>
                 <input type="text" class="form-control" name="rootURL" id="rootURL" [(ngModel)]="connection.current.rootURL">
             </div>        
-            <div class="form-group col-4 mt-3">
+            <div class="form-group col-6 mt-3">
                 <label for="accountName">Account Name</label>
                 <input type="text" class="form-control" name="accountName" id="accountName" [(ngModel)]="connection.current.accountName">
             </div>        
-            <div class="form-group col-4" >
+            <div class="form-group col-6" >
                 <label for="password">Password</label>
                 <input type="password" class="form-control" name="password" id="password" [(ngModel)]="connection.current.password">
             </div>     
-            <div class="form-group col-4" >
+            <div class="form-group col-6" >
                 <label for="subscriptionKey">Subscription Key</label>
                 <input type="text" class="form-control" name="subscriptionKey" id="subscriptionKey" [(ngModel)]="connection.current.subscriptionKey">
             </div>     
@@ -24,9 +24,14 @@
         </form>
     </div>
     <div *ngIf="connection.current.jwtToken">
-        Logged in as {{connection.current.accountName}} on {{connection.current.subscriptionKey}}
-        <div class="form-group col-12 mt-4">
-            <button (click)="onLogout()" class="btn btn-primary">Logout</button>
-        </div>   
+        <div class="row">
+            <a routerLink="/menu">Menu &gt;</a>
+        </div>
+        <div class="row">
+            Logged in as {{connection.current.accountName}} on {{connection.current.subscriptionKey}}
+            <div class="form-group col-12 mt-4">
+                <button (click)="onLogout()" class="btn btn-primary">Logout</button>
+            </div>   
+        </div>
     </div>
 </div>
