first attempt to invoke getdata not really working because of the cookies

--- a/magic-link/src/app/menu/menu.component.html
+++ b/magic-link/src/app/menu/menu.component.html
@@ -4,8 +4,8 @@
     </div>
     <div class="row">
         <div class="d-flex flex-column">
-            <!-- <a routerLink="/contacts-list">Contacts</a>
-            <a routerLink="/items">Items</a> -->
+            <a routerLink="/get-contacts">Get Contacts</a>
+            <!-- <a routerLink="/items">Items</a> -->
         </div>
     </div>
 </div>
