--- a/data-service-ng/src/app/items/items.component.html
+++ b/data-service-ng/src/app/items/items.component.html
@@ -11,9 +11,18 @@
             <button (click)="onList()" class="btn btn-primary ml-2">List Items</button>
         </form>
     </div>
-    <div class="row">
-        <ul >
-            <li *ngFor="let item of items">{{item["MA_Items.Item"]}} {{item["MA_Items.Description"]}}</li>
-        </ul>
+    <div class="row" *ngIf="columns.length > 0">
+        <table class="table table-sm">
+            <tr>
+                <th *ngFor="let column of columns">
+                    {{column.title}}
+                </th>
+            </tr>
+            <tr *ngFor="let item of items">
+                <td *ngFor="let column of columns">
+                    {{item[column.id]}}
+                </td>
+            </tr>
+        </table>
     </div>
 </div>
