--- a/magic-link-ng-dotnet/ClientApp/src/app/login/login.component.html
+++ b/magic-link-ng-dotnet/ClientApp/src/app/login/login.component.html
@@ -26,6 +26,12 @@
                 <button (click)="onCancel()" class="btn btn-secondary ml-2">Annulla</button>
             </div>   
         </form>
+        <div *ngIf="alertMessage" class="alert alert-danger alert-dismissible" role="alert">
+            {{alertMessage}}
+            <button type="button" class="close" data-dismiss="alert" (click)="alertMessage = null" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
     </div>
     <div *ngIf="connection.current.jwtToken">
         <div class="row">
